# application-title-bar-menu

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  releases.yml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: ActiveTasksModel.qml  ActiveWindow.qml  AppMenuBar.qml  KWinConfig.qml  WidgetElement.qml  main.qml  utils.js
package/contents/ui/config/: AddWidgetElement.qml  ConfigAppearance.qml  WidgetElements.qml
plugin/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h
